language/move-lang/tests/move_check/translated_ir_tests/signer/is_resource_transitive.move
module M {
    struct S<T> {
        f: T,
    }

    fun t(s: signer) {
        let x = S<signer> { f: s };
    }
}

// check: UNSAFE_RET_UNUSED_RESOURCES
